syntax = "proto3";

package services;
option go_package="./services";


service Counting {
	rpc Hello(HelloRequest) returns(HelloResponse);
	rpc CountBeef(CountBeefRequest) returns (CountBeefResponse);
}

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string result = 1;
}

message CountBeefRequest {}

message CountBeefResponse {
	map<string, int32> beef = 1;
}